--- a/app/src/main/res/layout/fragment_add_dhaba_step3.xml
+++ b/app/src/main/res/layout/fragment_add_dhaba_step3.xml
@@ -374,7 +374,7 @@
             </androidx.cardview.widget.CardView>
 
             <Button
-                android:id="@+id/btnSaveDhaba"
+                android:id="@+id/btnNext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
