--- a/app/src/main/res/layout/fragment_add_dhaba_step2.xml
+++ b/app/src/main/res/layout/fragment_add_dhaba_step2.xml
@@ -111,6 +111,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:inputType="textPostalAddress"
                     android:text="@={viewModel.address}"
+                    android:singleLine="false"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp" />
             </com.google.android.material.textfield.TextInputLayout>
