--- a/app/src/main/res/layout/fragment_add_dhaba_step1.xml
+++ b/app/src/main/res/layout/fragment_add_dhaba_step1.xml
@@ -63,6 +63,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_regular"
                     android:inputType="text"
+                    android:enabled="false"
                     android:text="@={viewModel.ownerName}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp" />
