--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -7,6 +7,7 @@
         <import type="com.transport.mall.R" />
 
         <import type="android.view.View" />
+
         <variable
             name="context"
             type="android.content.Context" />
@@ -48,9 +49,11 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    loadImage="@{model.images}"
+                    placeholder="@{R.drawable.ic_profile_pic_placeholder}"
                     android:layout_width="@dimen/_50sdp"
                     android:layout_height="@dimen/_50sdp"
-                    android:src="@drawable/ic_profile_pic_placeholder" />
+                    android:scaleType="centerCrop" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -109,7 +112,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:text="Near Surgical Complex"
+                    android:text="@{model.landmark}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12ssp" />
 
@@ -118,7 +121,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:text="Open 5 am to 2 am"
+                    android:text="Opening 5am to 10pm"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12ssp" />
 
